--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <!-- Add more navigation buttons -->
         </div>
     </div>
+    <link rel="manifest" href="/manifest.json">
     <script src="script.js"></script>
 </body>
 </html>
